<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能校园</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="costomview">im custom view</string>
    <string name="pulldown_scrollview">PulldownScrollView</string>
    <string name="stretch_scrollview">StretchScrollView</string>
    <string name="add_attention">加关注</string>
    <string name="user_post">等级：15级</string>
    <string name="user_book">状态：25条</string>
    <string name="user_name">Iceberg</string>
    <string name="user_des">最大的缺点就是读书太少而想的太多</string>
    <string name="user_recommend_tip">TA的状态</string>

</resources>