<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/scrollview_header" />

    <com.beyole.view.pullscrollview.widget.PullScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:headerHeight="300dp"
        app:headerVisibleHeight="100dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/scroll_view_head"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="100dp"
                android:background="@color/transparent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/card_avatar_bar" >

                    <TextView
                        android:id="@+id/attention_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="21dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/selector_btn"
                        android:drawableLeft="@drawable/add"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:paddingBottom="5dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="5dp"
                        android:text="@string/add_attention"
                        android:textColor="#57AF4E"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/user_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="103dp"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/user_post"
                        android:textColor="#A1A1A1"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/user_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_post"
                        android:layout_marginLeft="103dp"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/user_book"
                        android:textColor="#A1A1A1"
                        android:textSize="12sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginLeft="21dp"
                    android:background="@android:color/white"
                    android:contentDescription="@null"
                    android:padding="1px"
                    android:src="@drawable/avatar_default" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_toRightOf="@id/user_avatar"
                    android:ellipsize="end"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="3.0"
                    android:shadowDy="3.0"
                    android:shadowRadius="5.0"
                    android:singleLine="true"
                    android:text="@string/user_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <FrameLayout
                    android:id="@+id/user_divider_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_avatar"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:layout_marginTop="4dp" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="5dp"
                        android:background="#DFDFDF"
                        android:contentDescription="@null" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="29dp"
                        android:contentDescription="@null"
                        android:src="@drawable/arrow_up" />
                </FrameLayout>

                <TextView
                    android:id="@+id/user_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_divider_layout"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/user_des"
                    android:textColor="#B1B1B1"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:background="#F7F4F0"
                android:orientation="vertical"
                android:paddingBottom="8dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/user_recommend_tip"
                    android:textColor="#A1A1A1"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </com.beyole.view.pullscrollview.widget.PullScrollView>

    <ListView
        android:id="@+id/person_details_talklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view"
        android:divider="#F7F4F0"
        android:dividerHeight="10dp"
        android:scrollbars="none" >
    </ListView>

</RelativeLayout>